[gd_scene load_steps=4 format=3 uid="uid://battle_screen"]

[ext_resource type="Script" path="res://src/ui/battle_screen.gd" id="1_battle"]
[ext_resource type="Script" path="res://src/managers/BattleManager.gd" id="2_battle_mgr"]
[ext_resource type="Script" path="res://src/ui/battle_hud.gd" id="3_battle_hud"]

[node name="BattleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("2_battle_mgr")

[node name="BattleHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_battle_hud")
